# atxt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  CONSTITUTION.md  Cargo.toml  GUIDE.md  INSTRUCTIONS.md  README.md  RELEASE.md  flake.nix  justfile
.keel/: README.md  flow_history.json
.keel/epics/VDfBvLf8x/: PRD.md  README.md
.keel/epics/VDfKtP4Yp/: PRD.md  README.md
.keel/epics/VDfyDRgBo/: PRD.md  README.md
.keel/epics/VDgyaiPm5/: PRD.md  README.md
.keel/epics/VDoL6zQQe/: PRD.md  README.md
.keel/epics/VDsSA7qTy/: PRD.md  README.md
.keel/epics/VDsisINGM/: PRD.md  README.md
.keel/epics/VFDYN9LOV/: PRD.md  README.md
.keel/epics/VFNe2qYHS/: PRD.md  README.md
.keel/epics/VFOMXUMN2/: PRD.md  README.md
.keel/missions/OdYITjC8P/: CHARTER.md  LOG.md  README.md
.keel/missions/VDfBGV0cQ/: CHARTER.md  LOG.md  README.md
.keel/missions/VDfKoRyZ4/: CHARTER.md  LOG.md  README.md
.keel/missions/VDfy5BuD8/: CHARTER.md  LOG.md  README.md
.keel/missions/VDgyYMcrP/: CHARTER.md  LOG.md  README.md
.keel/missions/VDsSRE46s/: CHARTER.md  LOG.md  README.md
.keel/missions/VDsj1W9rO/: CHARTER.md  LOG.md  README.md
.keel/missions/VFDYMA8Mq/: CHARTER.md  LOG.md  README.md
.keel/missions/VFNRRaJ5z/: CHARTER.md  LOG.md  README.md
.keel/missions/VFOMUHdIe/: CHARTER.md  LOG.md  README.md
.keel/routines/ask-about-keel-system-audio-feedback-support-for-transitions/: README.md
.keel/stories/VDfBzGchT/: README.md  manifest.yaml
.keel/stories/VDfBzGvhS/: README.md  manifest.yaml
.keel/stories/VDfM40eXl/: README.md  manifest.yaml
.keel/stories/VDfM426Xm/: README.md  manifest.yaml
.keel/stories/VDfM43AVP/: README.md  manifest.yaml
.keel/stories/VDfybDtAG/: README.md  (+1 more)
examples/: render_demo.rs
src/: audio.rs  audio_render.rs  cli.rs  frame.rs  globe.rs  lib.rs  main.rs  media.rs  render.rs  sequence.rs  stats.rs  still_image.rs  terminal.rs  video.rs
src/testdata/: pulse.flac
tapes/: still-image-ascii.tape  still-image-direct.tape  timed-sequence-ascii.tape  timed-sequence-direct.tape
(+94 files in other folders)
