[package]
name = "atext"
version = "0.1.0"
edition = "2024"
description = "Render media as text for terminals, SSH, tmux, and verification workflows"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
gif = "0.13.3"
image = { version = "0.25.6", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
txtplot = { git = "https://github.com/rupurt/txtplot.git", rev = "821ea21777bd1e160d2e9aba7dddbc5b1830b946" }
